--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/app/components/header/header.component.css",
-              "src/app/components.css"
+              "src/app/components/header/header.component.css"
             ],
             "scripts": []
           },
