--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/app/components/header/header.component.css"
+              "src/app/components/header/header.component.css",
+              "src/app/components/tela-inicial/tela-inicial.component.css"
             ],
             "scripts": []
           },
